objects/SCP_Certa_GC__Update_Project_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Accion__c</fullName>
        <label>Accion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Descr_Servicio__c</fullName>
        <label>Descr_Servicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Descripci_n_proyecto__c</fullName>
        <label>Descripción proyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Descripcion_del_error__c</fullName>
        <label>Descripcion del error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Fecha_Accion__c</fullName>
        <label>Fecha Accion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__ID_Oportunidad__c</fullName>
        <label>ID_Oportunidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__ID_Proyecto__c</fullName>
        <label>ID_Proyecto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__ID_Servicio__c</fullName>
        <label>ID_Servicio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__hayError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hayError</label>
        <type>Checkbox</type>
    </fields>
    <label>Update Project Opportunity</label>
    <nameField>
        <label>Nombre de Update Project Opportunity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Update Projects Opportunity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>